--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "socket-rabbit",
-  "version": "1.0.0",
+  "name": "rabbit-socket.io",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,9 +8,20 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "start": "nodemon ./dist/index.js",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run lint",
+    "preversion": "npm run lint",
     "lint": "tslint -p tsconfig.json"
   },
   "author": "Noga Haskal",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nogahaskal/rabbit-socket.io.git"
+  },
+  "keywords": [
+    "Socket",
+    "Rabbit"
+  ],
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.6",
@@ -26,7 +37,6 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "menashmq": "^0.1.3",
